// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > should render correctly with component in content prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r5:"
      aria-describedby=":r5:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      Children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement bottom 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rk:"
      aria-describedby=":rk:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rc:"
      aria-describedby=":rc:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement right 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rg:"
      aria-describedby=":rg:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement top 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r8:"
      aria-describedby=":r8:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with required props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r0:"
      aria-describedby=":r0:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      Children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with required props and visible 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r1:"
      aria-describedby=":r1:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      Children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sentiment > should renders tooltip with placement neutral 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":ro:"
      aria-describedby=":ro:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sentiment > should renders tooltip with placement primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rs:"
      aria-describedby=":rs:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sizes > should renders tooltip with placement large 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r18:"
      aria-describedby=":r18:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sizes > should renders tooltip with placement medium 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r14:"
      aria-describedby=":r14:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sizes > should renders tooltip with placement small 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r10:"
      aria-describedby=":r10:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;
